Update ASP.NET Core packages, fix filter alignment error

--- a/src/SerilogMSSqlLogViewer/Styles/Site.scss
+++ b/src/SerilogMSSqlLogViewer/Styles/Site.scss
@@ -26,6 +26,7 @@
 
 #filterColumn {
     position: fixed;
+    right: 0;
 }
 
 #filters {
@@ -39,8 +40,3 @@
 tr {
     cursor: pointer;
 }
-
-/*.stickyColumn {
-    position: fixed;
-    top: 0px;
-}*/
